# knmi-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: python-release.yml
src/knmi_weather_mcp/: __init__.py  config.py  location.py  models.py  server.py  station.py  weather.py
tests/: test_station.py
