[project]
name = "knmi-weather-mcp"
version = "0.1.0"
description = "KNMI Weather MCP Server"
authors = []
dependencies = [
    "fastmcp",
    "httpx",
    "pydantic",
    "python-dotenv",
    "pytest",
    "polars",
    "xarray",
    "numpy",
    "netCDF4"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E", "F", "I", "B", "ERA"]
ignore = []
line-length = 120

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
